# EXviewer

./: .dockerignore  .env.development  .gitignore  DR UMR.session  DR UMR.session-journal  Dockerfile  Dockerfile.DEV  README.md  app.json  asset-manifest.json  auto.py  build&release.py  createRandomFakedata.py  index.html  package.json  pyproject.toml  requirements.txt  updateTranslate.py
.github/workflows/: DeployUI.yml  buildAndPushDocker.yml  buildMultiPlatform.yml  pyinstallerBuild.yml
demo/static/css/: main.f2374cc2.css
public/: index.html
public/sources/: translate.json
server/: __main__.py  __test__.py  build_linux.sh  build_termux.sh  build_windows.bat
server/termux-extend-libs/: libimagequant.so.0
server/tools/: GalleryTree.json  checkPassed.json  move.py  删除旧版本画廊.py  单向同步.py  备份.py  检查下载完整性.py  通过rclone压缩并备份.py
server/utils/: AioProxyAccessor.py  AsyncCacheWarper.py  AutoTask.py  BlockRules.py  DBM.py  DownloadManager.py  HTMLParser.py  MakePDF.py  tmo.py  tools.py
src/: App.css  App.js  KeyboardController.js  index.js  setupProxy.js
src/components/api/: fakeApi.js  fakeData.json  serverApi.js
src/components/ui/: AppSetting.js  GalleryPage.js  LoadingAnime.js  MainPage.js  SyncFromOther.js  UploadZip.js  ViewPage.js
src/components/utils/: BackButton.js  CustomCircularProgress.js  CustomScrollbar.js  FullScreenInputDialog.js  GetCategoryColor.js  GetTranslate.js  JumpScroll.js  MyHooks.js  PopoverNotifier.js  Router.js  SecondConfirmDialog.js  (+7 more)
static/js/: main.0acfc986.js  main.bf8ee762.js  main.cd0a573c.js.LICENSE.txt  main.ce468850.js
(+25 files in other folders)
