[project]
name = "exviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp==3.8.3",
    "cacheout==0.14.1",
    "coloredlogs==15.0.1",
    "fastapi==0.89.1",
    "ipy==1.1",
    "lxml==4.9.2",
    "pillow==10.0.0",
    "pypdf2==3.0.1",
    "tinydb==4.7.1",
    "uvicorn==0.19.0",
    "websockets==10.4",
]
